Fixes blank calendar date spacing.

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -37,8 +37,13 @@
 		}
 	}
 	.month-days {
-		line-height: 28px;
+		line-height: 35px;
 		width: 100%;
+		.date-blank {
+			display: inline-flex;
+			margin-right: 4px;
+			width: 24px;
+		}
 		.date {
 			display: inline-flex;
 			padding-left: 8px;
